// (-- api-linter: core::0191::java-package=disabled
// (-- api-linter: core::0191::java-multiple-files=disabled
// (-- api-linter: core::0191::java-outer-classname=disabled
//     aip.dev/not-precedent: We need to do this because reasons. --)
syntax = "proto3";

package qclaogui.project.v1;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/protobuf/empty.proto";
import "qclaogui/project/v1/user.proto";

option go_package = "github.com/qclaogui/gaip/genproto/project/apiv1/projectpb";

// A simple identity service.
service IdentityService {
  // This service is meant to only run locally on the port 9095
  option (google.api.default_host) = "localhost:9095";

  // Creates a user.
  rpc CreateUser(CreateUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/v1/users"
      body: "user"
    };

    option (google.api.method_signature) = "user";
  }

  // Retrieves the User with the given uri.
  rpc GetUser(GetUserRequest) returns (User) {
    option (google.api.http) = {get: "/v1/{name=users/*}"};

    option (google.api.method_signature) = "name";
  }

  // Lists all users.
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {
    option (google.api.http) = {get: "/v1/users"};
  }

  // Updates a user.
  rpc UpdateUser(UpdateUserRequest) returns (User) {
    option (google.api.http) = {
      patch: "/v1/{user.name=users/*}"
      body: "user"
    };
  }

  // Deletes a user, their profile, and all of their authored messages.
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/v1/{name=users/*}"};

    option (google.api.method_signature) = "name";
  }
}
